cluster/talos/apps/tandoor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tandoor
  labels:
    goldilocks.fairwinds.com/enabled: "true"
