cluster/talos/apps/tandoor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandoor-ingress
  namespace: tandoor
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: tandoor
      port:
        number: 8080
  tls:
  - hosts:
    - tandoor
